Structure of the CV

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>My CV - Camilo Andrés Gutiérrez Barriga</title>
 </head>
 <body>
@@ -53,22 +54,59 @@
                 <ul>
                     <h3><strong>Junior Tennis Assistant, Field Tennis</strong></h3>
                     <h5>Zipaquirá Tennis Club/Municipal Courts (February 2023 - June 2023)</h5>
-                    <li>I taught basic stroke techniques: forehand, backhand, serve, and volley.
+                    <li>I taught basic stroke techniques: forehand, backhand, serve, and volley.</li>
                     <li>I supervised coordination and technique improvement exercises.</li>
                     <li>I organized and led recreational games to improve motor skills.</li>
                 </ul>
                 <ul>
-                    <h2><strong>Database assistant in Excel</strong></h2>
+                    <h3><strong>Database assistant in Excel</strong></h3>
                     <h5>Independent (January 2024- May 2024)</h5>
                     <li>I digitized medical records and medication logs for over 200 patients.</li>
                     <li>Maintained confidentiality and security of patients medical information.</li>
                 </ul>    
-                    
+           </section>
+        </div>
 
+        <div>
+            <section> <!--Sección De Habilidades Técnicas, Blandas e Idiomas. -->
+                <h2>Skills</h2>
+                <ul>
+                    <h3>Technique Skills: </h3>
+                    <h4>Programming Languages</h4>
+                    <p>Knowledge of programming fundamentals, data structures and algorithms, object-oriented programming in: </p>
+                    <li>Python</li>
+                    <li>Java</li>
+                    <li>R</li>
 
+                    <h4>Softwares </h4>
+                    <p>Basic knowledge for analyzing and organizing different types of data: </p>
+                    <li>Excel</li>
+                    <li>Power BI</li>
+
+                    <h3>Soft Skills: </h3>
+                    <li>Leadership</li>
+                    <li>Effective communication</li>
+                    <li>Problem solving</li>
+
+                    <h3>Languages</h3>
+                    <li><Strong>Spanish</Strong>: Native</li>
+                    <li><Strong>English</Strong>: Intermediate Level</li>
+                </ul>
+            </section>
+        </div>
+
+        <div>
+            <section>
+                <h2>Interests & Hobbies</h2>
+                <ul>
+                    <li>Playing Tennis</li>
+                    <li>Working out at the gym</li>
+                    <li>Learning new technologies and programming</li>
+                    <li>Travelling and learning about cultures</li>
+                    <li>Supporting Independiente Santa Fe team at the stadium</li>
+                </ul>
             </section>
         </div>
     </main>
-
 </body>
 </html>
