--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>    <!--Encabezado con mi nombre-->
         <h1>Camilo Andrés Gutiérrez Barriga</h1>
+        <img src="" alt="">
         <h3><em>Student of Informatics Engineering</em></h3>
     </header>
 
@@ -53,14 +54,14 @@
                 <h2>Laboral Experience</h2>
                 <ul>
                     <h3><strong>Junior Tennis Assistant, Field Tennis</strong></h3>
-                    <h5>Zipaquirá Tennis Club/Municipal Courts (February 2023 - June 2023)</h5>
+                    <h5><em>Zipaquirá Tennis Club/Municipal Courts (February 2023 - June 2023)</em></h5>
                     <li>I taught basic stroke techniques: forehand, backhand, serve, and volley.</li>
                     <li>I supervised coordination and technique improvement exercises.</li>
                     <li>I organized and led recreational games to improve motor skills.</li>
                 </ul>
                 <ul>
                     <h3><strong>Database assistant in Excel</strong></h3>
-                    <h5>Independent (January 2024- May 2024)</h5>
+                    <h5><em>Independent (January 2024- May 2024)</em></h5>
                     <li>I digitized medical records and medication logs for over 200 patients.</li>
                     <li>Maintained confidentiality and security of patients medical information.</li>
                 </ul>    
