Structure of the page 3.0

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>    <!--Encabezado con mi nombre-->
         <h1>Camilo Andrés Gutiérrez Barriga</h1>
-        <img src="" alt="">
+        <img src="foto.JPEG" alt="Imagen Camilo"> 
         <h3><em>Student of Informatics Engineering</em></h3>
     </header>
 
@@ -107,6 +107,11 @@
                     <li>Supporting Independiente Santa Fe team at the stadium</li>
                 </ul>
             </section>
+        </div>
+        <div class="attributtion">
+          Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
+          Coded by <a href="#">Camilo Andrés Gutiérrez Barriga</a>
+
         </div>
     </main>
 </body>
