--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>    <!--Encabezado con mi nombre-->
         <h1>Camilo Andrés Gutiérrez Barriga</h1>
         <img src="foto.JPEG" alt="Imagen Camilo"> 
-        <h3><em>Student of Informatics Engineering</em></h3>
+        <h3 class="h3descriptivo">Student of Informatics Engineering</h3>
     </header>
 
     <main>
@@ -22,7 +22,9 @@
               
                 I have a solid foundation in programming, particularly in Java and Python, and possess an intermediate level of English that enables me to understand technical documentation and communicate effectively in diverse environments.
                 </p>
-            
+        </div>
+        <div>
+            <section>   <!--Sección con mis habilidades -->
                 <h2>Personal Information</h2>
                     <ul>
                         <li><strong>Adress: </strong> Zipaquirá, Colombia</li>
