--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
 
         <div>
-            <section>
+            <section><!--Secciòn de Interèses y Hobbies-->
                 <h2>Interests & Hobbies</h2>
                 <ul>
                     <li>Playing Tennis</li>
